--- a/src/partials/library-header.html
+++ b/src/partials/library-header.html
@@ -1,7 +1,9 @@
 <header class="page-header">
     <div class="container">
-        <a href="./index.html" class="logo">Filmoteka</a>
-        <nav>
+        <nav class="navigation">
+            <a href="./index.html" class="logo_link">
+                <span class="logo-span_link">Filmoteka</span>
+            </a>
             <ul class="navigation__list">
                 <li class="navigation__item">
                     <a class="navigation__link " href="./index.html">Home</a>
@@ -10,14 +12,14 @@
                     <a class="navigation__link navigation__link--accent" href="./index.html">my library</a>
                 </li>
             </ul>
-        </nav>
-        <ul class="btn-group_list">
-            <li class="btn-group_item">
-                <button class=" btn_library">Watched</buttonclass>
-            </li>
-            <li class="btn-group_item">
-                <button class=" btn_library">queue</buttonclass>
-            </li>
-        </ul>
+            </navc>
+            <ul class="btn-group_list">
+                <li class="btn-group_item">
+                    <button class=" btn_library">Watched</buttonclass>
+                </li>
+                <li class="btn-group_item">
+                    <button class=" btn_library">queue</buttonclass>
+                </li>
+            </ul>
     </div>
 </header>
