--- a/src/partials/library-header.html
+++ b/src/partials/library-header.html
@@ -15,10 +15,10 @@
             </navc>
             <ul class="btn-group_list">
                 <li class="btn-group_item">
-                    <button class=" btn_library">Watched</buttonclass>
+                    <button class=" btn_library">Watched</button>
                 </li>
                 <li class="btn-group_item">
-                    <button class=" btn_library">queue</buttonclass>
+                    <button class=" btn_library">queue</button>
                 </li>
             </ul>
     </div>
