--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,6 +3,7 @@
 @import './_mixins';
 @import './common';
 @import './header';
+@import './library_header';
 @import './main';
 @import './_movie-modal';
 @import './footer';
