--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -28,6 +28,7 @@
               </nav>
               
             </div>
+            <div class="test1">
 
               <form class="header-search-form ">
                 <div class="form-search">
@@ -43,6 +44,7 @@
                   </button>
                 </div>
               </form>
+            </div>
 
       </div>
 
