--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,12 +5,12 @@
       ><svg class="footer__heart-goit" width="16" height="14">
         <use href="./images/icons.svg#icon-heart-goit"></use>
       </svg> </span
-    >by <span class="footer__link">GoIT team__students</span>
+    >by <span class="footer__link">AZOV team</span>
   </p>
 </footer>
 <div class="footer__backdrop is-hidden">
   <div class="footer__modal">
-    <button class="modal__button-close button" data-modal-close>
+    <button class="modal__button-close" data-modal-close>
       <svg class="modal__icon-close" width="20" height="20">
         <use
           class="modal__cross"
@@ -20,7 +20,7 @@
         ></use>
       </svg>
     </button>
-    <h2 class="team">MovieMakers</h2>
+    <h2 class="team">AZOV team</h2>
     <ul class="team__list">
       <!-- 1st -->
       <li class="team__item">
