--- a/src/sass/_library-header.scss
+++ b/src/sass/_library-header.scss
@@ -1,7 +1,7 @@
 .library-header{
-    // background-size: 100% auto;
-    // background-repeat: no-repeat;
-    // background-position: center;
+    background-size: 100% auto;
+    background-repeat: no-repeat;
+    background-position: center;
     background-image: url(../images/background_img_library320px.jpg);
 
 }
